--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -41,7 +41,7 @@ section {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: var(--color-primary-5);
+    background-color: #2efd34;
     border-radius: 12px;
     padding: 10px 14px;
     font-weight: 600;
